# used only for documentation generation via mkdocs

[project]
name = "qordle"
version = "0.1.0"
description = "Wordle solver"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-material>=9.7.1",
]

[dependency-groups]
dev = []
